--- a/backend/sitebuilder/translations/messages.cz.yml
+++ b/backend/sitebuilder/translations/messages.cz.yml
@@ -1,3 +1,4 @@
 New Registration account: Registrace nového účtu.
 Activation failed: Aktivace selhala
 Password recovery: Obnova hesla
+Rate Limit Exceeded: Překročen limit requestů
